# big-brother-server

./: .release-please-config.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PRODUCTION_READINESS_REVIEW.md  README.md  architecture.md
.claude/commands/: lint-and-pr.md
.github/workflows/: ci.yml  release-please.yml
docs/: server.md
specs/: SPEC-root.md  SPEC-server.md  architecture.md  sequence.md
src/: config.rs  db.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs
templates/: base.html  device.html  index.html
tests/: api_checkin.rs  api_device.rs  api_index.rs  db_operations.rs
tests/common/: mod.rs
