[package]
name = "inventory-server"
version = "0.2.0"
edition = "2021"
description = "REST API server for endpoint inventory with SQLite persistence"
license = "MIT"

[dependencies]
anyhow = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
validator = { version = "0.20", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["trace", "limit"] }
tower_governor = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4", features = ["derive"] }
askama = "0.12"
askama_axum = "0.4"

# Optional: enable direct TLS in Rust (rustls). If you terminate TLS upstream, you can remove.
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["client", "http1"] }
http-body-util = "0.1"
